# grpc_for_window

./: CMakeLists.txt  PROJECT_SETUP.md  README.md  VIVA_DOCUMENTATION.md  setup_project.ps1  vcpkg.json
client/: file_client.cpp  file_client.h
proto/: file_service.proto
python/: README.md  client.py  file_service_pb2.py  file_service_pb2_grpc.py  server.py  setup.bat
python/file_storage/: test.txt
server/: file_server.cpp  file_server.h
